# repo

./: .gitattributes  .gitignore  CLAUDE.md  README.md
app-back/: .env.example  menu_admin.json  pyproject.toml
app-back/app/: config.py  main.py
app-back/app/api/: config.py  menu.py  users.py
app-back/app/models/: menu.py  user.py
app-back/app/services/: user_service.py
app-back/tests/: test_users.py
app-front/: index.html  package-lock.json  package.json
app-front/src/: App.tsx
app-front/src/api/: menu.ts
app-front/src/components/sidebar/: Sidebar.tsx
app-front/src/hooks/: useMenu.ts
app-front/src/pages/: pageRegistry.tsx
app-front/src/types/: menu.ts
